2008-07-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/barrier.t, user/clock.t, user/dpmem.t, user/msg.t, user/part.t,
	user/region.t, user/rtmon.t, user/sem.t, user/task.t, user/timer.t:
	Correct documentation typos noticed and thankfully reported by
	Fabrício de Novaes Kucinskis <fabricio@dea.inpe.br>

2008-06-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/io.t: Fix typos for IO unregister reported by Catalin Morosan
	<catalin.morosan at gmail.com>.

2008-06-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Fix text on CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER.

2008-04-16	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/bsp.t, user/conf.t, user/init.t, user/intr.t, user/overview.t,
	user/timer.t: Correct default values. Make it clear that confdefs.h
	calculates the memory required for you.

2007-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpu_supplement/tic4x.t: Remove.
	* cpu_supplement/Makefile.am, cpu_supplement/cpu_supplement.texi:
	Remove refs to tic4x/c4x.

2007-11-29	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* develenv/direct.t, develenv/sample.t: Corrected various errors in the
	documentation.

2007-11-28	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* user/barrier.t, user/clock.t, user/concepts.t, user/conf.t,
	user/datatypes.t, user/dpmem.t, user/fatal.t, user/init.t, user/mp.t,
	user/msg.t, user/part.t, user/region.t, user/rtmon.t, user/sem.t,
	user/task.t, user/timer.t: Corrected various errors in the
	documentation.

2007-11-27	Joel Sherrill <joel.sherrill@OARcorp.com>

	* develenv/develenv.texi, develenv/direct.t, develenv/intro.texi,
	develenv/sample.t, develenv/utils.t: Update directory tree.

2007-11-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add CONFIGURE_APPLICATION_EXTRA_DRIVERS.

2007-09-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems_footer.html.in, common/cpright.texi: Update copyright.

2007-08-02	Joel Sherrill <joel.sherrill@OARcorp.com>
