@@ -1,3 +1,9 @@
+2008-07-22	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	pr1291/cpukit
+	* posix_users/mutex.t: Add ETIMEDOUT.
+	* posix_users/semaphores.t: Clarify text to say absolute timeout.
+
 2008-07-15	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* user/barrier.t, user/clock.t, user/dpmem.t, user/msg.t, user/part.t,
